# occt-examples

./: README.md
A-UseOCCT/ConanOcct/: CMakeLists.txt  conanbuild.bat
A-UseOCCT/ConanOcct/src/: main.cpp
